@@ -1,3 +1,5 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
-FM47gX3vI5ofQPm1li
-FZjUS57tUkGFTibv3
+FU6P513gQKLVP6iwmf
+FU6P513gQKLVP6iwmf
+get_file_handle called
+get_file_handle called
